# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  README.md  dotfiles-map.json  dotfiles-map.schema.json  downloads.json  downloads.schema.json  gitconfig  kitty-macos.conf  kitty.conf  opencode.json  tmux-box.md  tmux-dump.d.ts
.github/workflows/: clip-release.yml  rproxy-release.yml  static-tools.yml
clip/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.linux-tests  README.md  clip.SPEC
clip/crates/clip-cli/: Cargo.toml
clip/crates/clip-cli/src/: args.rs  input.rs  lib.rs  main.rs  output.rs  run.rs
clip/crates/clip-cli/tests/: args.rs  cli_linux.rs
clip/scripts/: test-linux-docker.sh
clip/testdata/: snippet.html  uris.txt
fish/: config.fish  config_tide.fish  fish_plugins  fish_variables
fish/conf.d/: fix_tide_after_4.3.fish  recent_repos.fish  rustup.fish
fish/functions/: :q.fish  _tide_cache_variables.fish  _tide_decolor_stale_git.fish  _tide_mark_stale_git_prompt.fish  _tide_print_item.fish  _tide_remove_unusable_items.fish  apply_env.fish  fish_prompt.fish  init_tide.fish  repos.fish  vimjson.fish
git/: config  ignore
ha_helper/: AGENTS.md  Cargo.toml  README.md
ha_helper/examples/: config.toml
ha_helper/src/: config.rs  lib.rs  (+4 more)
ironbar/: config.toml  style.css
keyd/: default.conf
mako/: config
niri/: config.kdl
nvim/: lazy-lock.json  lazyvim.json
opencode/: .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install.sh  oh-my-opencode.json  opencode.json  opencode.plist  server.sh  tui.json
renew-aliyun-certs/: .gitignore  renew-aliyun-certs  renew-aliyun-certs.conf.example
rproxy/: AGENTS.md  Cargo.toml  README.md
rproxy/src/: alloc.rs  client.rs  lib.rs  main.rs  protocol.rs  routing.rs  server.rs
rproxy/tests/: client_reconnect.rs  http_tunnel.rs  tcp_tunnel.rs
scripts/: build-static-tools-linux.sh  build-static-tools-macos.sh
tbox/: AGENTS.md  __init__.py  cli.py  core.py
tmux/: .tmux.conf  tmux.conf  tmux.conf.local
void/: AGENTS.md
(+70 files in other folders)
