[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rproxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
