[package]
name = "clip-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clip"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clip-core = { path = "../clip-core" }
clip-platform = { path = "../clip-platform" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
